bug fix for chart overlaps on mobile browser

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,8 @@ body {
 
 .content {
   height: 100vh;
+  min-height: 100vh;
+  overflow: auto;
   display: flex;
   flex-direction: row;
   justify-content: center;
